--- a/express/package.json
+++ b/express/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky",
+    "prepare": "chmod +x .husky/commit-msg",
     "commitlint": "commitlint --edit"
   },
   "author": "",
